--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.0.0
   cupertino_icons: ^1.0.8
-
+  image_picker: ^0.8.4+8
 dev_dependencies:
   flutter_test:
     sdk: flutter
