--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cloud_firestore: ^4.0.0
   cupertino_icons: ^1.0.8
   image_picker: ^0.8.4+8
+  geolocator: ^8.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
