--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   image_picker: ^0.8.4+8
   geolocator: ^8.2.0
+  intl: ^0.18.0
+  file_picker: ^5.0.0
+  firebase_storage: ^11.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
